// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse: render should not render collapse component child if it not "CollapseItem" 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    collapsed={false}
    id="test-collapse.1"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items and first item should be expanded 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    collapsed={false}
    expanded={true}
    id="test-collapse.0"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    collapsed={false}
    id="test-collapse.1"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items with custom id 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    collapsed={false}
    id="сid1"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    collapsed={false}
    id="сid2"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return "accordion" collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    collapsed={false}
    id="test-collapse.0"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    collapsed={false}
    id="test-collapse.1"
    isAccordion={true}
    name="test-collapse"
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    collapsed={false}
    id="test-collapse.0"
    isAccordion={false}
    name="test-collapse"
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    collapsed={false}
    id="test-collapse.1"
    isAccordion={false}
    name="test-collapse"
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return empty collapse component 1`] = `null`;
